--- a/app/src/main/res/layout/fragment_save_partner_game.xml
+++ b/app/src/main/res/layout/fragment_save_partner_game.xml
@@ -43,62 +43,66 @@
             </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/team1NameEntryHint"
-            style="@style/SingleGameTextInputLayoutStyle"
-            android:layout_marginTop="16dp"
-            android:gravity="top"
-            android:hint="@string/enter_team1_name"
-            app:boxStrokeColor="@color/text_input_layout_box_stroke_color"
-            app:counterEnabled="true"
-            app:counterMaxLength="20"
-            app:counterTextColor="@color/text_input_layout_counter_text_color"
-            app:errorEnabled="true"
-            app:hintTextColor="@color/text_input_layout_hint_color"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:backgroundTint="@color/settings_card_background_color"
+            app:cardCornerRadius="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/toolBar">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/team1NameEntry"
-                style="@style/SingleGameTextInputEditTextStyle"
-                android:inputType="text"
-                android:maxLength="21" />
-        </com.google.android.material.textfield.TextInputLayout>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/team2NameEntryHint"
-            style="@style/SingleGameTextInputLayoutStyle"
-            android:hint="@string/enter_team2_name"
-            app:boxStrokeColor="@color/text_input_layout_box_stroke_color"
-            app:counterEnabled="true"
-            app:counterMaxLength="20"
-            app:counterTextColor="@color/text_input_layout_counter_text_color"
-            app:errorEnabled="true"
-            app:hintTextColor="@color/text_input_layout_hint_color"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/team1NameEntryHint">
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/team1NameEntryHint"
+                    style="@style/SingleGameTextInputLayoutStyle"
+                    android:hint="@string/enter_team1_name"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/team2NameEntry"
-                style="@style/SingleGameTextInputEditTextStyle"
-                android:inputType="text"
-                android:maxLength="21" />
-        </com.google.android.material.textfield.TextInputLayout>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/team1NameEntry"
+                        style="@style/SingleGameTextInputEditTextStyle"
+                        android:inputType="text"
+                        android:maxLength="21" />
+                </com.google.android.material.textfield.TextInputLayout>
 
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/team2NameEntryHint"
+                    style="@style/SingleGameTextInputLayoutStyle"
+                    android:hint="@string/enter_team2_name"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/team1NameEntryHint">
 
-        <Button
-            android:id="@+id/confirmNames"
-            style="@style/ButtonStyle"
-            android:layout_width="match_parent"
-            android:backgroundTint="@color/cursor_color"
-            android:text="@string/save_names"
-            android:textAllCaps="false"
-            android:visibility="visible"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/team2NameEntryHint" />
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/team2NameEntry"
+                        style="@style/SingleGameTextInputEditTextStyle"
+                        android:inputType="text"
+                        android:maxLength="21" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <Button
+                    android:id="@+id/confirmNames"
+                    style="@style/ButtonStyle"
+                    android:layout_width="match_parent"
+                    android:backgroundTint="@color/cursor_color"
+                    android:text="@string/save_names"
+                    android:textAllCaps="false"
+                    android:visibility="visible"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/team2NameEntryHint" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/playerNameTitle"
@@ -108,7 +112,7 @@
             android:text="@string/teamNamesAndScoresTitle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/confirmNames"
+            app:layout_constraintTop_toBottomOf="@+id/cardView"
             app:drawableLeftCompat="@drawable/ic_partner" />
 
         <com.google.android.material.textfield.TextInputLayout
