--- a/app/src/main/res/layout/fragment_save_single_game.xml
+++ b/app/src/main/res/layout/fragment_save_single_game.xml
@@ -42,103 +42,97 @@
             </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/player1NameEntryHint"
-            style="@style/SingleGameTextInputLayoutStyle"
-            android:layout_marginTop="16dp"
-            android:hint="@string/enter_player1_name"
-            app:boxStrokeColor="@color/text_input_layout_box_stroke_color"
-            app:counterEnabled="true"
-            app:counterMaxLength="20"
-            app:hintTextColor="@color/text_input_layout_hint_color"
-            app:counterTextColor="@color/text_input_layout_counter_text_color"
-            app:errorEnabled="true"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:backgroundTint="@color/settings_card_background_color"
+            app:cardCornerRadius="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/toolBar">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/player1NameEntry"
-                style="@style/SingleGameTextInputEditTextStyle"
-                android:inputType="text"
-                android:maxLength="21" />
-        </com.google.android.material.textfield.TextInputLayout>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp">
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/player1NameEntryHint"
+                    style="@style/SingleGameTextInputLayoutStyle"
+                    android:hint="@string/enter_player1_name"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/player1NameEntry"
+                        style="@style/SingleGameTextInputEditTextStyle"
+                        android:inputType="text"
+                        android:maxLength="21" />
+                </com.google.android.material.textfield.TextInputLayout>
 
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/player2NameEntryHint"
-            style="@style/SingleGameTextInputLayoutStyle"
-            android:hint="@string/enter_player2_name"
-            app:boxStrokeColor="@color/text_input_layout_box_stroke_color"
-            app:counterEnabled="true"
-            app:counterMaxLength="20"
-            app:hintTextColor="@color/text_input_layout_hint_color"
-            app:counterTextColor="@color/text_input_layout_counter_text_color"
-            app:errorEnabled="true"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/player1NameEntryHint">
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/player2NameEntryHint"
+                    style="@style/SingleGameTextInputLayoutStyle"
+                    android:hint="@string/enter_player2_name"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/player1NameEntryHint">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/player2NameEntry"
-                style="@style/SingleGameTextInputEditTextStyle"
-                android:inputType="text"
-                android:maxLength="21" />
-        </com.google.android.material.textfield.TextInputLayout>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/player2NameEntry"
+                        style="@style/SingleGameTextInputEditTextStyle"
+                        android:inputType="text"
+                        android:maxLength="21" />
+                </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/player3NameEntryHint"
-            style="@style/SingleGameTextInputLayoutStyle"
-            android:hint="@string/enter_player3_name"
-            app:boxStrokeColor="@color/text_input_layout_hint_color"
-            app:counterEnabled="true"
-            app:counterMaxLength="20"
-            app:hintTextColor="@color/text_input_layout_hint_color"
-            app:counterTextColor="@color/text_input_layout_counter_text_color"
-            app:errorEnabled="true"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/player2NameEntryHint">
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/player3NameEntryHint"
+                    style="@style/SingleGameTextInputLayoutStyle"
+                    android:hint="@string/enter_player3_name"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/player2NameEntryHint">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/player3NameEntry"
-                style="@style/SingleGameTextInputEditTextStyle"
-                android:inputType="text"
-                android:maxLength="21" />
-        </com.google.android.material.textfield.TextInputLayout>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/player3NameEntry"
+                        style="@style/SingleGameTextInputEditTextStyle"
+                        android:inputType="text"
+                        android:maxLength="21" />
+                </com.google.android.material.textfield.TextInputLayout>
 
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/player4NameEntryHint"
-            style="@style/SingleGameTextInputLayoutStyle"
-            android:hint="@string/enter_player4_name"
-            app:boxStrokeColor="@color/text_input_layout_hint_color"
-            app:counterEnabled="true"
-            app:counterMaxLength="20"
-            app:hintTextColor="@color/text_input_layout_hint_color"
-            app:counterTextColor="@color/text_input_layout_counter_text_color"
-            app:errorEnabled="true"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/player3NameEntryHint">
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/player4NameEntryHint"
+                    style="@style/SingleGameTextInputLayoutStyle"
+                    android:hint="@string/enter_player4_name"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/player3NameEntryHint">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/player4NameEntry"
-                style="@style/SingleGameTextInputEditTextStyle"
-                android:inputType="text"
-                android:maxLength="21" />
-        </com.google.android.material.textfield.TextInputLayout>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/player4NameEntry"
+                        style="@style/SingleGameTextInputEditTextStyle"
+                        android:inputType="text"
+                        android:maxLength="21" />
+                </com.google.android.material.textfield.TextInputLayout>
 
-        <Button
-            android:id="@+id/confirmNames"
-            style="@style/ButtonStyle"
-            android:layout_width="match_parent"
-            android:text="@string/save_names"
-            android:textAllCaps="false"
-            android:visibility="visible"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/player4NameEntryHint" />
+                <Button
+                    android:id="@+id/confirmNames"
+                    style="@style/ButtonStyle"
+                    android:layout_width="match_parent"
+                    android:text="@string/save_names"
+                    android:textAllCaps="false"
+                    android:visibility="visible"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/player4NameEntryHint" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/playerNameTitle"
@@ -148,7 +142,7 @@
             android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/confirmNames"
+            app:layout_constraintTop_toBottomOf="@+id/cardView"
             app:drawableStartCompat="@drawable/ic_player" />
 
         <com.google.android.material.textfield.TextInputLayout
