--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,30 +25,36 @@
     </style>
 
 
-    <style name="SingleGameTextInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
+    <style name="SingleGameTextInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">@color/main_background_color</item>
+        <item name="android:background">@android:color/transparent</item>
         <item name="android:textColor">@color/text_input_layout_text_color</item>
         <item name="android:textColorHint">@color/text_input_layout_hint_color</item>
         <item name="android:backgroundTint">@color/main_background_color</item>
         <item name="android:padding">4dp</item>
         <item name="android:textStyle">bold</item>
         <item name="boxStrokeWidth">1dp</item>
-        <item name="android:layout_marginStart">8dp</item>
-        <item name="android:layout_marginEnd">8dp</item>
+        <item name="boxCornerRadiusBottomStart">16dp</item>
+        <item name="boxCornerRadiusTopEnd">16dp</item>
+        <item name="boxCornerRadiusTopStart">16dp</item>
+        <item name="boxCornerRadiusBottomEnd">16dp</item>
+        <item name="boxStrokeColor">@color/text_input_layout_box_stroke_color</item>
+        <item name="counterEnabled">true</item>
+        <item name="counterMaxLength">20</item>
+        <item name="counterTextColor">@color/text_input_layout_counter_text_color</item>
+        <item name="errorEnabled">true</item>
+        <item name="hintTextColor">@color/text_input_layout_hint_color</item>
 
     </style>
 
     <style name="SingleGameTextInputEditTextStyle"  >
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">@color/main_background_color</item>
-        <item name="android:backgroundTint">@color/main_background_color</item>
+        <item name="android:backgroundTint">@android:color/transparent</item>
         <item name="android:textColor">@color/score_text_color</item>
         <item name="android:textColorHint">@color/score_text_color</item>
         <item name="android:inputType">numberSigned</item>
-
     </style>
 
     <style name="ButtonStyle" parent="Widget.MaterialComponents.Button">
