--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
         <item name="android:background">@android:color/transparent</item>
         <item name="android:padding">4dp</item>
         <item name="android:textStyle">bold</item>
-        <item name="boxStrokeWidth">0.8dp</item>
+        <item name="boxStrokeWidth">0.3dp</item>
         <item name="boxStrokeColor">@color/text_input_layout_box_stroke_color</item>
         <item name="boxCornerRadiusBottomStart">16dp</item>
         <item name="boxCornerRadiusTopEnd">16dp</item>
@@ -73,6 +73,7 @@
         <item name="android:gravity">center_vertical</item>
         <item name="android:paddingStart">13dp</item>
         <item name="android:textSize">15sp</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:padding">8dp</item>
     </style>
 
