--- a/app/src/main/res/layout/fragment_finished_partner_game.xml
+++ b/app/src/main/res/layout/fragment_finished_partner_game.xml
@@ -44,33 +44,30 @@
             app:layout_constraintTop_toBottomOf="@+id/searchView" />
     </ScrollView>
 
-    <TextView
-        android:id="@+id/recordNotFoundText"
-        android:layout_width="match_parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="-60dp"
-        android:textAlignment="center"
+    <Button
+        android:id="@+id/createPartnerGame"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/record_not_found"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="8dp"
+        android:paddingHorizontal="32dp"
+        android:background="@drawable/custom_button"
+        android:text="Eşli oyun oluştur"
+        android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/recordNotFoundImage" />
 
     <ImageView
         android:id="@+id/recordNotFoundImage"
-        android:layout_marginTop="8dp"
-        android:layout_width="200dp"
-        android:layout_height="100dp"
-        android:src="@drawable/ic_beckon"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:layout_margin="8dp"
+        android:contentDescription="@string/todo"
+        android:src="@drawable/illustration_no_data"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recordNotFoundText"
-        android:contentDescription="@string/todo" />
+        app:layout_constraintTop_toBottomOf="@+id/searchView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
